--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="main__title">Акция в Январе - <span class="main__inderline">30% скидка</span>  на землю и коммуникации в п. Владимировка</div>
       <!-- /.main__title -->
       <div class="main__text"> <span class="text__decor">Внимание!</span>  Осталось <span class="text__decor--inderline">63</span>  участка из 215!</div>
+      <button class="button  button__primary button__primary--main">Получить скидку</button>
       <!-- /.main__text -->
       </div>
       <!-- /.main__wrap -->
@@ -62,7 +63,7 @@
               <!-- /.form__title -->
               <input type="text" class="input input__user" placeholder="Ваше имя">
               <input type="text" class="input input__phone" placeholder="Ваш телефон">
-              <button class="button form__button">Получить скидку</button>
+              <button class="button button__primary">Получить скидку</button>
               <!-- /.form__button -->
             </div>
             <!-- /.form__wrap -->
